tests/miniJava/neg/006599_mutation.MiniJava
class java { public static void Main ( String 0 [ ] java ) { { } } }
